Trying to fix list items not having proper padding on mobile
- Had to wrap all skills in a span to edit their padding without impacting the list item dot thing
- Adjustments to have a 1ch wide gap between the list item and the dot. Hopefully this makes it work on mobile
- Issue might be that, on desktop added a 1ch padding is actually making it a 2ch padding because for some reason, desktop has the padding where mobile doesnt

--- a/src/styles/test.css
+++ b/src/styles/test.css
@@ -131,11 +131,12 @@
 	white-space: nowrap;
 }
 
-.contact-section-link{
+.contact-section-link,
+.skills-section-skill{
 	color: inherit;
 	text-decoration: none;
 	background: inherit;
-	padding: 0.2em 0.4em;
+	padding: 0.2em calc(1ch + 0.4em);
 	margin: -0.2em -0.4em;
 }
 
